ppt md, html 경로 이동, OT 내용 추가

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <img src="./images/study_logo.png"/>
     <h1>cheese cRust 스터디 목차</h1>
-    <a href="0_OT.html">
+    <a href="ppt/0_OT.html">
         <h1>OT</h1>
     </a>
 </body>
