--- a/ppt/0_OT.html
+++ b/ppt/0_OT.html
@@ -49,7 +49,7 @@
 </section>
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="7" data-paginate="true" data-theme="uncover" data-marpit-pagination="7" data-marpit-pagination-total="25" style="--paginate:true;--theme:uncover;">
 <ul>
-<li>매주 목요일 22:00~23:00 (1시간)</li>
+<li>매주 수요일 22:00~23:00 (1시간)</li>
 <li>각자 공부한 내용을 정리</li>
 <li>PPT, Notion, Github Page 등 자유</li>
 </ul>
