--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <a href="ppt/0_OT.html">
         <h1>OT</h1>
     </a>
+    <a href="ppt/1_start_rust.html">
+        <h1>1주차 - Hello World, 추리 게임, 보편적인 프로그래밍 개념</h1>
+    </a>
 </body>
 
 </html>
