--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
     <a href="ppt/1_start_rust.html">
         <h1>1주차 - Hello World, 추리 게임, 보편적인 프로그래밍 개념</h1>
     </a>
+
+    <a href="ppt/2_ownership.html">
+        <h1>1주차 - Hello World, 추리 게임, 보편적인 프로그래밍 개념</h1>
+    </a>
 </body>
 
 </html>
