--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </a>
 
     <a href="ppt/2_ownership.html">
-        <h1>1주차 - Hello World, 추리 게임, 보편적인 프로그래밍 개념</h1>
+        <h1>2주차 - 소유권 이해하기</h1>
     </a>
 </body>
 
