--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
     <a href="ppt/2_ownership.html">
         <h1>2주차 - 소유권 이해하기</h1>
     </a>
+    <a href="ppt/3_structure_enum.html">
+        <h1>3주차 - 구조체, 열거형, 패턴매칭</h1>
+    </a>
 </body>
 
 </html>
