add week 5 mission, add week 5 to index and readme

--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
     <a href="ppt/3_structure_enum.html">
         <h1>3주차 - 구조체, 열거형, 패턴매칭</h1>
     </a>
+    <h1>4주차 - 패키지, 컬렉션</h1>
+    <a href="ppt/5_error_generic.html">
+        <h1>5주차 - 에러처리, 제네릭</h1>
+    </a>
 </body>
 
 </html>
