--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
     <a href="ppt/5_error_generic.html">
         <h1>5주차 - 에러처리, 제네릭</h1>
     </a>
+    <h1>6주차 - trait, 라이프타임</h1>
+    <h1>7주차 - 테스트, 함수형 언어 특성</h1>
 </body>
 
 </html>
