--- a/index.html
+++ b/index.html
@@ -29,7 +29,11 @@
     <a href="ppt/6_trait_lifetime.html">
         <h1>6주차 - trait, 라이프타임</h1>
     </a>
-    <h1>7주차 - 테스트, 함수형 언어 특성</h1>
+    <a href="ppt/6_trait_lifetime.html">
+        <h1>7주차 - 테스트</h1>
+    </a>
+    <h1>8주차 - 함수형 언어 특성</h1>
+    <h1>9주차 - 스마트 포인터</h1>
 </body>
 
 </html>
