--- a/index.html
+++ b/index.html
@@ -1,39 +1,38 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>cheese cRust 스터디</title>
-</head>
+  </head>
 
-<body>
-    <img src="./images/study_logo.png"/>
+  <body>
+    <img src="./images/study_logo.png" />
     <h1>cheese cRust 스터디 목차</h1>
     <a href="ppt/0_OT.html">
-        <h1>OT</h1>
+      <h1>OT</h1>
     </a>
     <a href="ppt/1_start_rust.html">
-        <h1>1주차 - Hello World, 추리 게임, 보편적인 프로그래밍 개념</h1>
+      <h1>1주차 - Hello World, 추리 게임, 보편적인 프로그래밍 개념</h1>
     </a>
     <a href="ppt/2_ownership.html">
-        <h1>2주차 - 소유권 이해하기</h1>
+      <h1>2주차 - 소유권 이해하기</h1>
     </a>
     <a href="ppt/3_structure_enum.html">
-        <h1>3주차 - 구조체, 열거형, 패턴매칭</h1>
+      <h1>3주차 - 구조체, 열거형, 패턴매칭</h1>
     </a>
     <h1>4주차 - 패키지, 컬렉션</h1>
     <a href="ppt/5_error_generic.html">
-        <h1>5주차 - 에러처리, 제네릭</h1>
+      <h1>5주차 - 에러처리, 제네릭</h1>
     </a>
     <a href="ppt/6_trait_lifetime.html">
-        <h1>6주차 - trait, 라이프타임</h1>
+      <h1>6주차 - trait, 라이프타임</h1>
     </a>
     <a href="ppt/6_trait_lifetime.html">
-        <h1>7주차 - 테스트</h1>
+      <h1>7주차 - 테스트</h1>
     </a>
     <h1>8주차 - 함수형 언어 특성</h1>
     <h1>9주차 - 스마트 포인터</h1>
-</body>
-
+    <h1>10주차 - 겁 없는 동시성</h1>
+  </body>
 </html>
